tdf#129829 sfx2: fix handling of password to open vs modify

Regression from commit e0f20211a8048a87b078aa4cf0f28c0c847487ad (sw
reqif-xhtml import: add a new AllowedRTFOLEMimeTypes parameter,
2019-12-16), the problem was that in case the (input) stream for an
opened document is kept alive, then we don't try to re-create it, which
means providing a different password behaves the same as providing the
same (wrong) password.

It seems CheckPasswd_Impl() in sfx2 only calls
comphelper::DocPasswordHelper::requestAndVerifyDocPassword() in case we
don't have a decrypted stream already.

Fix the problem by deleting those streams from the remembered input
parameters, the interesting ones have custom key names anyway.

[ No testcase, the problem is Windows-only and it's not clear to me why
the behavior is platform-specific. ]

Change-Id: I2fc1f0567244897caa18548161fe426ac7d0dfd4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87182
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins